# django-frontend-boilerplate

./: .gitignore  README.md  manage.py  pyproject.toml  renovate.json
.github/workflows/: build.yml
backend/core/: settings.py  urls.py  wsgi.py
backend/tests/core/: test_core.py
frontend/: .eslintrc.js  index.jsx  package-lock.json  package.json
