[tool.black]
line-length = 88
exclude = '''
/(
  | migrations
  | .venv
)/
'''

[tool.flake8]
ignore = ["F405", "E501", "W503", "E731", "E741",]
max-line-length = 88
exclude = [
    ".git", "migrations", "node_modules", "docs", ".venv", "frontend"
]
statistics = false

[tool.isort]
line_length = 88
skip_glob = "*/migrations/.py"
multi_line_output = 3
profile = "black"
filter_files = true
include_trailing_comma = true
force_grid_wrap = 2

[tool.poetry]
name = "Django core project"
version = "0.1.0"
description = ""
authors = ["Piwero <piwero@gmail.com>"]

[tool.poetry.dependencies]
Django = "^4.1.4"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.24.2"
python = "^3.9"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
black = "^22.12"
flake9 = "3.8.3.post2"
ipdb = "^0.13.9"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
pytest-xdist = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "backend.core.settings"
python_files = "tests.py test_*.py *_tests.py"
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb -p no:warnings --cov backend"
testpaths = [
    "backend.tests",
]
